--- a/src/App.scss
+++ b/src/App.scss
@@ -15,36 +15,41 @@ p{
   padding: 0;
 }
 .App {
-
   .absolute-img{
     height: 100%;
     width: 100%;
-    position: absolute;
+    position: fixed;
     z-index: -1;
   }
 }
-
 .style-global-p{
   font-size: 30px;
   color: #fff;
+  @media (max-width: 575px) {
+    font-size: 20px;
+  }
 }
 .position-relative{
   position: relative;
 }
-
 .style-global-span{
-  font-size: 15px;
+  font-size: 25px;
   color: #fff;
+  @media (max-width: 575px) {
+    font-size: 20px;
+  }
 
 }
 .style-global-span-temp{
   position: absolute;
   top: 6px;
-  left: 57%;
-  font-size: 12px;
+  left: 63%;
+  font-size: 20px;
   color: rgba(255, 255, 255, 0.43);
   @media (max-width: 575px) {
-    left: 61%;
+    left: 68%;
+    top: 17px;
+    font-size: 15px;
   }
 }
 .padding-country{
