--- a/src/Components/SearchWeather/SearchWeather.css
+++ b/src/Components/SearchWeather/SearchWeather.css
@@ -1,16 +1,30 @@
 .content-search {
   text-align: center;
   width: 100%;
-  padding-top: 10px;
+  padding-top: 20px;
 }
-.content-search .css-18oq5cf-MuiInputBase-root-MuiInput-root:before {
-  border-bottom: 2px solid #ebebeb1c !important;
+.content-search input {
+  background: transparent;
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 30px;
+  border-bottom: 2px solid white;
+  color: white;
+  font-size: 20px;
 }
-.content-search .css-1teokgg-MuiFormLabel-root-MuiInputLabel-root {
-  color: #fff !important;
+.content-search input::-webkit-input-placeholder {
+  color: white;
+  opacity: 0.9;
 }
-.content-search .css-66dh3a-MuiInputBase-input-MuiInput-input {
-  color: white !important;
+.content-search input::-moz-placeholder {
+  /* Firefox 19+ */
+  color: white;
+  opacity: 0.9;
+}
+.content-search input:-ms-input-placeholder {
+  color: white;
+  opacity: 0.9;
 }
 
 /*# sourceMappingURL=SearchWeather.css.map */
