--- a/src/Components/SearchWeather/SearchWeather.scss
+++ b/src/Components/SearchWeather/SearchWeather.scss
@@ -1,21 +1,35 @@
 
 
 
-.content-search{
+.content-search {
   text-align: center;
   width: 100%;
-  padding-top: 10px;
-
-
-  .css-18oq5cf-MuiInputBase-root-MuiInput-root:before{
-  border-bottom: 2px solid #ebebeb1c !important
+  padding-top: 20px;
+input{
+  background: transparent;
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 30px;
+  border-bottom: 2px solid white;
+  color: white;
+  font-size: 20px;
 
 
 }
- .css-1teokgg-MuiFormLabel-root-MuiInputLabel-root{
-    color: #fff!important;
+  input::-webkit-input-placeholder {
+    color: white;
+    opacity: .9;
   }
-  .css-66dh3a-MuiInputBase-input-MuiInput-input{
-color: white!important;
+
+
+  input::-moz-placeholder {  /* Firefox 19+ */
+    color: white;
+    opacity: .9;
+  }
+
+  input:-ms-input-placeholder {
+    color: white;
+    opacity: .9;
   }
 }
